--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -108,6 +108,10 @@ header .gnb ul li:hover {
     color: #fff;
 }
 
+/* index 제외한 header */
+header.common {
+    background: #1b1b1b;
+}
 
 /* section visual style */
 section.visual .slide li {
