--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -24,6 +24,7 @@ header {
     width: 100%;
     /* background: red; */
     position: fixed;
+    top: 0;
     z-index: 100;
 }
 header .inner-header {
